# nds-shell

./: .clang-format  .clangd  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  PLANNER.md  README.md  addr2line.sh  compile-to-sdcard.sh  configure.sh  copy-to-melonds.sh  copy-to-sdcard.sh  curl-attempt.txt  emulate.sh  format.sh  make.sh  openssl.sh  sample.cpp  tcpserver.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmake/: BlocksDSDylibDemo.cmake  BlocksDSDynamicLibraries.cmake  BlocksDSDynamicLibraries.md  insert_git_hash.cmake
config/: wolfssl_patch.sh
docs/: dkp-build-quirks.md
include/: CliPrompt.hpp  Commands.hpp  Consoles.hpp  CurlMulti.hpp  DylibManager.hpp  EscapeSequences.hpp  Hardware.hpp  Lexer.hpp  NetUtils.hpp  Parser.hpp  Shell.hpp  ShellClass.hpp  TcpSocket.hpp  WebSocket.hpp  elfload.h  libdeps.hpp  my_state.hpp
include/blocksds/: pthread.h
lua/: api-test.lua  arg-test.lua  discord-test.lua  discord-websocket-test.lua  error-test.lua  fetch-test.lua  json-test.lua  prompt.lua  simple-websocket-test.lua  websocket-test.lua
old_shell/: everything.h  main.cpp  netparse.cpp  tcpclient.cpp  terminal.cpp  util.cpp
old_source/: ap_search.cpp  everything.h  main.cpp  netparse.cpp  tcpclient.cpp
oop_confusion/: KeyboardProcessor.hpp  Prompt.cpp  Prompt.hpp  Shell.hpp
ref/: README.md  ap_search.cpp  helloworld.cpp  kb-async.cpp  kb-stdio.cpp
scripts/: .ndshrc  copy-to-sdcard.sh  emulate.sh
server_scripts/: http.js  tcp.js
source/: CliPrompt.cpp  CliPrompt.hpp  Cursor.hpp  EscapeSequences.hpp  FindAPInteractive.cpp  Lexer.cpp  Lexer.hpp  NDS_Shell.cpp  NDS_Shell.hpp  NetParse.cpp  NetParse.hpp  NetUtils.cpp  NetUtils.hpp  Parser.cpp  ProcessLine.cpp  RunCommand.cpp  Shell.cpp  Shell.hpp  StandardStreams.hpp  StartShell.cpp  ap_search.cpp  commands.cpp  deps.h  directory.cpp  everything.h  everything.hpp  http.cpp  libdeps.hpp  main.cpp  netparse.cpp  shell.cpp  tcpclient.cpp  terminal.cpp  util.cpp  wifi.cpp
source/NDS_Shell/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp
source/commands/: http.cpp  other.cpp  wifi.cpp
src/: CliPrompt.cpp  Commands.cpp  Consoles.cpp  CurlMulti.cpp  DylibManager.cpp  Hardware.cpp  Lexer.cpp  MultiConsole.cpp  NetUtils.cpp  Parser.cpp  PrintVersions.cpp  Shell.cpp  ShellClass.cpp  WebSocket.cpp  custom_swi_test.cpp  main.cpp  multi-console.cpp  version.h.in
src/commands/: curl.cpp  dylib.cpp  elfload.cpp  elfloader.cpp  http.cpp  lua.cpp  other.cpp  ssh.cpp  tcp.cpp  telnet.cpp  wifi.cpp  ws.cpp
src/console/: console-clear.cpp  console-cursor.cpp  console-esc.cpp  console-print.cpp  console-priv.hpp
src/dylib_demo/: demo.c  demo.cpp  libA.cpp  libB.cpp  libC.cpp
src/lua/: load_CliPrompt.cpp  load_CommandContext.cpp  load_Shell.cpp  load_WebSocket.cpp  load_fetch.cpp  load_libnds_funcs.cpp  load_websocket.cpp  my_state.cpp
test-scripts/: .ndsh_history  .ndshrc  README.md  test.lua
unused-src/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  wifi.cpp
